After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777299 - Let the export button be insensitive when no recipe is selected for export
Let the export button be insensitive when no recipe is selected for export
Status: RESOLVED FIXED
Product: recipes
Classification: Other
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Recipes maintainer(s)
Recipes maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-01-16 05:40 UTC by Mohammed Sadiq
Modified: 2017-01-17 02:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
recipe export (image) (14.26 KB, image/png)
2017-01-16 05:40 UTC, Mohammed Sadiq
  Details
exporter: set export button sensitivity conditionally (1.99 KB, patch)
2017-01-17 02:09 UTC, Mohammed Sadiq
committed Details | Review

Description Mohammed Sadiq 2017-01-16 05:40:30 UTC
Created attachment 343525 [details]
recipe export (image)

How to reproduce:

1. Open some recipe 
2. in bottom right actionbar select 'Export'
3. deselect the items to export

Result:
The 'Export' button is still active when no recipe is selected for export

Expected result:
When no recipe is selected, let the Export button be insensitive to clicks.

Thanks
Comment 1 Matthias Clasen 2017-01-16 13:00:53 UTC
Yeah, that would be nice to fix.
Want to try writing a patch ?
Comment 2 Mohammed Sadiq 2017-01-17 02:09:27 UTC
Created attachment 343604 [details] [review]
exporter: set export button sensitivity conditionally

When no recipe is selected for exporting, there is no
need to allow the user to Export the recipes.

So let the Export button be sensitive only if at least
one recipe is marked for export.
Comment 3 Matthias Clasen 2017-01-17 02:49:42 UTC
Attachment 343604 [details] pushed as 8798878 - exporter: set export button sensitivity conditionally