exporter: set export button sensitivity conditionally

When no recipe is selected for exporting, there is no
need to allow the user to Export the recipes.

So let the Export button be sensitive only if at least
one recipe is marked for export.

https://bugzilla.gnome.org/show_bug.cgi?id=777299